fix table background color on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* misc */
-.table tbody tr:hover td, .table tbody tr:hover th {
+table, .table tbody tr:hover td, .table tbody tr:hover th {
 	background-color: inherit;
 }
 .tooltip-link {
